# acs-console

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-dropbear.yml  ci.yml  docker-publish.yml  release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts  util.ts
frontend/src/components/: Accounts.tsx  Actions.tsx  CapturesBanner.tsx  DeviceDetailView.tsx  DeviceIdentity.tsx  DeviceList.tsx  EventLog.tsx  ParametersTable.tsx  Settings.tsx  TaskHistory.tsx  WireViewer.tsx
src/: config.rs  connreq.rs  console.rs  cpe_server.rs  cwmp.rs  digest.rs  main.rs  settings.rs  store.rs  util.rs
tools/: crack_acs_digest.py
